# ai-video-editor

./: .gitignore  CLAUDE.md  LICENSE  PIPELINE-NOTES.md  README.md  cleanup.sh  setup.ps1  setup.sh  update.sh  審片.html  我的剪輯偏好.md  我的剪輯偏好.範本.md
.claude/: settings.json
.claude/skills/ai-edit/: SKILL.md
scripts/windows/: install-font.ps1
tools/: PIPELINE-NOTES.md  cleanup.sh  env.sh  update.sh  我的剪輯偏好.範本.md
tools/freecut/: pyproject.toml
tools/freecut/helpers/: edl_to_captions.py  finalize.sh  gen_captions.py  make_review_page.py  render.py  send_report.sh  split_blobs.py  transcribe.py  transcribe_batch.py  verify_cut.py  xref_silence.py
tools/freecut/templates/: 專案筆記.範本.md
tools/測試報告/: 2026-07-20-win11-第三次.md
素材庫/: 說明.md
素材庫/b-roll/: 讀我-這裡放你自己的空景畫面.md
素材庫/圖片/: 讀我-這裡放你自己的圖片與logo.md
素材庫/背景音樂/: 讀我-這裡放你自己的背景音樂(內建BGM在預設包).md
素材庫/音效/: 讀我-這裡放你自己的音效(內建音效在預設包).md
素材庫/預設包/: 對照表.md
